
Removals:

- gbsplay:
  - remove unmaintained splint annotations
  - remove regparm optimizations
  - remove usleep() usage, use nanosleep() instead (it's more POSIX)

Enhancements:

- gbsplay:
  - add SDL2 plugout
  - transparent decompression of gzip-compressed files
  - basic VGM file support
  - remove unneeded dsound3d dependency from dsound plugin

- xgbsplay:
  - add simple X11 frontend; use configure --with-xgbsplay

- build process:
  - depend on bash 3.x for configure script
  - add automated build pipelines for Linux, macOS and
    Windows (MSYS2, MINGW32 and MINGW64; no CygWin yet)
    - test for successful builds
    - test plugout configuration
    - test some configure options
    - test install and uninstall targets
    - calculate code coverage
  - use command -v instead of homegrown which replacement

Documentation:

- convert README to Markdown format
- add shiny build status badges to README.md


2020/06/26  -  0.0.94
~~~~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbsplay:
  - cpu emulation fixes:
    - RLCA/RLA/RRCA/RRA did not set ZF
    - fix botched SBC zero flag handling
    - fix slight bug in ADC/SBC
    - fix INC/DEC SP, CP A and half-carry flag in DEC
    - fix PUSH/POP AF
    - fix cycle timing for conditional branches
    - fix cycle timing for LD HLSP/LD SPHL and 16bit ALU ops
    - halt with global interrupt flag disabled can still be interrupted
  - fix error on midi plugout where a write to the file could occur
    before the file was opened
  - fix garbled screen on exit in verbose mode (gbsplay -v)
  - fix status display: respect channel in left/right total volume
  - fix impulse generator: generate a header file at compile-time
  - restore mute settings after every apu_reset

- build process:
  - fix test target during parallel builds (make -j)
  - support building with MSYS2
  - fix ShellCheck warnings

Removals:

- ditz bug tracker issues removed, use the issue tracker on the github