@@ -1,4 +1,4 @@
-.\" This manpage 2003-2020 (C) by Christian Garbs <mitch@cgarbs.de>
+.\" This manpage 2003-2022 (C) by Christian Garbs <mitch@cgarbs.de>
 .\" Licensed under GNU GPL v1 or, at your option, any later version.
 .TH "GBSPLAY" "1" "%%%VERSION%%%" "Tobias Diedrich" "Gameboy sound player"
 .SH "NAME"
@@ -271,6 +271,15 @@ This reduces the verbosity to 0 (see \fI-q\fP)
 because stdout is used for the dumped data.
 The raw audio is always stereo (2 channels), 16 bit signed PCM.
 Sample rate and endianness can be set via \fI-r\fP and \fI-E\fP.
+.TP
+.B wav
+Write separate WAV files (RIFF WAVE) for every subsong.
+The files are called \fIgbsplay-%d.wav\fP,
+where \fI%d\fP is replaced with the subsong number.
+The files are created in the current working directory
+and existing files are silently overwritten.
+The output is always encoded as stereo (2 channels), 16 bit signed PCM
+in big endian.  Sample rate can be set via \fI-r\fP.
 .SH "FILES"
 .TP
 .I /etc/gbsplayrc
